# a2a-gotchipus

./: .gitignore  LICENSE  README.md  server.py
agents/gene_agent/: README.md  __main__.py  agent.py  task_manager.py
agents/story_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
core/: base_agent.py  protocol.py  task.py
routes/: gene.py  story.py
